# chatlib

./: README.md  global_config.py  pyproject.toml  setup.py  test_auto_chat.py  test_chat_cli.py  test_mapper.py
chatlib/: azure_llama2_utils.py  chat_completion.py  chat_completion_api.py  cli.py  dialogue_to_csv.py  dialogue_utils.py  dict_utils.py  env_helper.py  jinja_utils.py  mapper.py  message_transformer.py  openai_utils.py  serializable.py  versatile_mapper.py
chatlib/chatbot/: __init__.py  dialogue_to_csv.py  generator.py  message_transformer.py  response_generator.py  session.py  session_writer.py  types.py
chatlib/chatbot/generators/: __init__.py  claude.py  cohere.py  gemini.py  gpt.py  llama.py  mixtral.py  state.py  together.py
chatlib/integration/: anthropic_api.py  azure_llama2_api.py  azure_llama2_utils.py  cohere_api.py  gemini_api.py  gemini_utils.py  mixtral_api.py  openai_api.py  openai_utils.py  together_api.py
chatlib/llm/: chat_completion_api.py  versatile_mapper.py
chatlib/llm/integration/: __init__.py  anthropic_api.py  azure_llama2_api.py  cohere_api.py  gemini_api.py  openai_api.py  together_api.py
chatlib/tool/: converter.py  mapper.py  versatile_mapper.py
chatlib/utils/: cli.py  dict_utils.py  event.py  integration.py  jinja_utils.py  serializable.py  time.py  validator.py
