[tool.poetry]
name = "chatlib"
version = "0.6.0"
description = "A generalizable Python Chatbot Library"
authors = ["Young-Ho Kim <yghokim@younghokim.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.8"
nanoid = "^2.0.0"
python-dotenv = "^1.0.0"
pendulum = "^2.1.2"
jsonlines = "^3.1.0"
yaspin = "^2.3.0"
jinja2 = "^3.1.2"
tiktoken = "^0.4.0"
transformers = "^4.37.2"
questionary = "^2.0.1"
google-generativeai = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
